Fixed a few typos.

--- a/gh-weblog-2/content/posts/markdown/2014-09-20-01-21-59.md
+++ b/gh-weblog-2/content/posts/markdown/2014-09-20-01-21-59.md
@@ -1,4 +1,4 @@
-You run an open source project, and I have a meaningful contribution for you. I'd love to submit it, but now you're asking me for my personal information, without ever having shown that you can be trusted with that: I'm not signing your CLA.
+You run an open source project, and I have a meaningful contribution for you. I'd love to submit it, but now you're asking me for my personal information, without ever having shown that you can be trusted with that: I'm not signing your CLA (Contributor License Agreement).
 
 You may have seen articles of the "I will not sign your NDA" variety popping up in your newsfeeds every now and then, and this post is in the same vein. I will not sign your CLA, and there's a very good reason for it.
 
@@ -12,7 +12,7 @@ There are reasons I won't sign a CLA for Google or Facebook: they haven't earned
 
 Bottom line: I don't trust you. If you were a project born out of a Google idea and now you're on your own and you have nothing to do with actual Google projects (I'm looking at you, Polymer) or you're a Kahn Academy project that is being spun as a replacement for MathJax, not tied into the Kahn Academy codebase at all (I'm looking at you, KaTeX), then you are no longer Google or Kahn Academy. You're projects without the authority of your parent to back you up, and you're new on the open source map. I haven't heard anything bad about what you do with identity information from real human beings, but then I've heard nothing good, either: I don't trust you, because I don't think it's unrealistic we're going to disagree on something in an issue I file, and I don't think it's unrealistic to imagine tempers might flare and someone's going to end up looking up my personal information and take things offline. I fully imagine that to be imaginary, but this is the real world, and you're asking for real, personally identifiable information. You need to earn the right to ask for that that; you don't have that right just because you're an open source project.
 
-Can you explain why you need my name, my phone number, and my real world address? "The lawyers said it was okay" is not a good enough answer. What if I have no phone? I actually don't, I have no use for one. What if I have no permanent address? I actually do, but I know people wo don't, and you can't read hacker news without hitting an article about people working out of coffee shops with $2500 macbooks but no permanent address fairly often. Can you explain why you're discriminating against people in this way? Because it's kind of bizarre, but there it is: your CLA is discriminating again those less well off. Kind of generally the kind of people who benefit most from open source projects (note: "most"; people with phones and permanent addresses obviously benefit from open source, but the less you have, the more important freely accessible tools are)
+Can you explain why you need my name, my phone number, and my real world address? "The lawyers said it was okay" is not a good enough answer. What if I have no phone? I actually don't, I have no use for one. What if I have no permanent address? I actually do, but I know people who don't, and you can't read Hacker News without hitting an article about people working out of coffee shops with $2500 MacBooks but no permanent address fairly often. Can you explain why you're discriminating against people in this way? Because it's kind of bizarre, but there it is: your CLA is discriminating again those less well off. Kind of generally the kind of people who benefit most from open source projects (note: "most"; people with phones and permanent addresses obviously benefit from open source, but the less you have, the more important freely accessible tools are)
 
 For what a CLA was originally intended for, it has to discriminate at least enough to identify you as the person you claim to be, but if your project is not the used-by-millions powerhouse of a Discourse or Elasticsearch, your use of a CLA is not about making sure a patch is legally safe to merge in. You're just doing what you've been told without asking whether that even made sense and fighting for open source. You're actually making open source feel worse by pretending we all need to sign these things before we can even contribute code and help build a better world. And ironically, the CLA, designed to make sure patches can be landed, actually sets an artificial bar for what you consider a worthy contributor. When you look at it that way, and I so very much do, it's kind of sad and sickening and I don't understand why you're denigrating people by insisting on a nonsense agreement for which I could make up random numbers and letters and you will not even question it because you have no way of verifying the information short of sending someone to the address I give you and calling the phone number I provided. To which I can claim to never be home, and that I changed phone numbers since signing that CLA.
 
