--- a/gh-weblog-2/content/posts/markdown/2015-07-14-01-12-40.md
+++ b/gh-weblog-2/content/posts/markdown/2015-07-14-01-12-40.md
@@ -107,7 +107,7 @@ Modern digital cameras will record at 14ish bits worth of intensity, which gives
 
 We see that between each pure grey level, there are six more nuanced intensities, but each expressing a primary bias. The six is actually 3! ("three factorial"), which is the number of unique [permutations](https://en.wikipedia.org/wiki/Permutation) three elements allow. With six primaries, we get 720 (6!) possible nuances.
 
-In addition, because the human eye is better at distinguishing contrast in darks and less good at distinguishing contasts in lights, the intensities are stored [after a logarithmic transform,](http://dcinema.me/2014/09/film-look-more-on-linear-log-gamma-curves), which you will probably know about due to [gamma correction](https://en.wikipedia.org/wiki/Gamma_correction) (although gamma correction is what you apply *afterwards*, to transform the logarithmically stored data back to a linear gradient on a screen) so that we use more bits to store darks, because they're more important, and fewer bits to store lights, because they're less important.
+In addition, because the human eye is better at distinguishing contrast in darks and less good at distinguishing contrasts in lights, the intensities are stored [after a logarithmic transform,](http://dcinema.me/2014/09/film-look-more-on-linear-log-gamma-curves), which you will probably know about due to [gamma correction](https://en.wikipedia.org/wiki/Gamma_correction) (although gamma correction is what you apply *afterwards*, to transform the logarithmically stored data back to a linear gradient on a screen) so that we use more bits to store darks, because they're more important, and fewer bits to store lights, because they're less important.
 
 ## So what happens when we add more primaries?
 
@@ -128,7 +128,7 @@ If we wanted to add more primaries, in order to capture more colours, we would:
 
 The title of this article is "We are really terrible at digital colours, *and digital photography*" and I think it's time to explain why the latter is the case.
 
-In ye olden days, photography meant exposing a film that consisted of multiple layers of "reactive-to-certain-color-ranges" emulsion, to a focused light source, and then washing off all the stuff that didn't react. To then actually *see* the photograph, you'd either have to shine a bright light through the film (for ["positive"](https://en.wikipedia.org/wiki/Reversal_film) film), or capture the light as it was filtered by the film on photosensitive paper (for ["negative"](https://en.wikipedia.org/wiki/Negative_%28photography%29) film). Or, if you used a polaroid, the paper WAS the film, and basically [magic happened](https://en.wikipedia.org/wiki/Instant_film).
+In ye olden days, photography meant exposing a film that consisted of multiple layers of "reactive-to-certain-color-ranges" emulsion, to a focused light source, and then washing off all the stuff that didn't react. To then actually *see* the photograph, you'd either have to shine a bright light through the film (for ["positive"](https://en.wikipedia.org/wiki/Reversal_film) film), or capture the light as it was filtered by the film on photosensitive paper (for ["negative"](https://en.wikipedia.org/wiki/Negative_%28photography%29) film). Or, if you used a Polaroid, the paper WAS the film, and basically [magic happened](https://en.wikipedia.org/wiki/Instant_film).
 
 Now, again, historical baggage has held us back: the first digital cameras really couldn't do much more than mimic this film process, with using a digital sensor: the shutter opens, light falls on the sensor, each point on the sensor "fills up" to some degree, the shutter closes, and then we ask each point "how much light did you collect?". This is exactly the same process as analog film, just done with digital sensors instead of reactive film emulsion.
 
@@ -168,7 +168,7 @@ Right now, cameras encode the "how much light did you collect over X amount of t
 }
 ```
 
-Each colour channel is a (possibly compressed) 14 bit integer representing that point's recorded amount of light. The channels don't have "a colour", they're basically just greyscale sensors (implementing full spectrum sensors would be amazing, but is so complicated it'd be a post on its own), but the light that falls into them will have been filtered such that a particular sensor will have recorded the intensity of a particular (interval) of wavelenght(s) of physical light, and the information on which sensor recorded which "colour" comes from knowing which colour pattern is used by which camera.
+Each colour channel is a (possibly compressed) 14 bit integer representing that point's recorded amount of light. The channels don't have "a colour", they're basically just greyscale sensors (implementing full spectrum sensors would be amazing, but is so complicated it'd be a post on its own), but the light that falls into them will have been filtered such that a particular sensor will have recorded the intensity of a particular (interval) of wavelength(s) of physical light, and the information on which sensor recorded which "colour" comes from knowing which colour pattern is used by which camera.
 
 So, in the same manner we could instead record:
 
@@ -206,7 +206,7 @@ But, alas, Lytro of course had to spend lots of money on researching the technol
 
 Would uptake be better if they'd priced the devices competitively, and hadn't locked down their file format? Sure. Would they make enough money to go **beyond** that initial investment in the technology and improve upon it, to the point where it can actually compete on quality with already existing digital cameras? Probably not.
 
-They're on their second camera as I write this, which costs US$1200 and while able to generate an amazing kind of data file, yields data that can only generate images measuring 2450 by 1634 pixels, with a fixed lens that is 30-250mm equivalent, with a whopping 3.2 crop factor sensor. Now, if you know digital photography, you might be thinking  that those values mean something, because you're used to hearing them, and you might be thinking that an equivalent dSLR made by Nikon or Canon, price wise, gets you a camera that has a four times higher resolution, with better interchangable lenses (30-250mm? *think of the distortion!*) , and a 1.5-1.2 crop factor.
+They're on their second camera as I write this, which costs US$1200 and while able to generate an amazing kind of data file, yields data that can only generate images measuring 2450 by 1634 pixels, with a fixed lens that is 30-250mm equivalent, with a whopping 3.2 crop factor sensor. Now, if you know digital photography, you might be thinking  that those values mean something, because you're used to hearing them, and you might be thinking that an equivalent dSLR made by Nikon or Canon, price wise, gets you a camera that has a four times higher resolution, with better interchangeable lenses (30-250mm? *think of the distortion!*) , and a 1.5-1.2 crop factor.
 
 Of course, 2450 by 1634 pixels is wider than what you're publishing to the internet, and of course that zoom range means nothing in terms of what you're used to from "interchangeable SLR lenses" since the lens has to work for light fields, not planar recording, and you've never worked with a lens that has to do that, so your knowledge of what is a "safe" zoom range for dSLR is absolutely irrelevant for a Lytro camera, but you're going to lie to yourself and pretend you know what you're talking about, and you won't be buying a Lytro camera, and that's the battle we're fighting:
 
@@ -234,7 +234,7 @@ Some people had some questions about whether this was practical or theoretical, 
 
 So, first off: it is entirely true that traditional film doesn't cover the full gamut either, but traditional film worked a little differently from digital sensors - their gamuts aren't "triangular", they're far more wobbly (as [Duncan Wilcox](https://twitter.com/duncanwilcox/status/620892975468572673) points out, for instance), and they're not all restricted to a single gamut; different films cover different colour ranges. So film lets us at least partially deal with the issue of bad color spaces: the wobbliness actually gives us far more nuance in areas where it matters. In the same way that digitizing audio by throwing away "the parts we can't really hear" is a great way to bring down signal complexity, it's important to throw away "the parts that don't matter" in the visual spectrum too, and the problem there is that the triangular gamuts throw away "too much". The nuances in green are lost in virtually all colour spaces, while traditional film preserves them. Certainly, they will come out looking a little different from film type to film type, but that's the other reasons why film at least had a solution: if you knew what you were shooting, you could pick the film to match that. While it was a hassle, this was a workable thing, allowing you to preserve the nuance you needed in those parts of the spectrum where it mattered (the digital equivalent would be to swap out image sensors based on the gamut you need, which isn't really a thing digital cameras can do). So film was certainly not perfect either, but it wasn't perfect in a slightly different way, and allowed users to work around the limitations to some extent.
 
-Now, *technically* digital cameras also have "wobbly" sensors, but if you shoot in "not RAW", the camera will force the image data to fit the aRGB gamut, and even if you shoot RAW you're probably missing out on a fair bit of colour. The older [Nikon D300s](http://www.amateurphotographer.co.uk/reviews/dslrs/nikon-d300s/8), or newer [Canon EOS D7](http://www.amateurphotographer.co.uk/reviews/dslrs/canon-eos-7d/8), for instance, can capture those rich purples in RAW mode, but physically cannot record a fair number of greens that even aRGB covers, so if that data has to be "compressed" back into aRGB for putting online (kind of what everyone is doing these days) then we don't just lose those rich colours, we also distort our greens.  That plain old sucks.
+Now, *technically* digital cameras also have "wobbly" sensors, but if you shoot in "not RAW", the camera will force the image data to fit the aRGB gamut, and even if you shoot RAW you're probably missing out on a fair bit of colour. The older [Nikon D300s](http://www.amateurphotographer.co.uk/reviews/dslrs/nikon-d300s/8), or newer [Canon EOS 7D](http://www.amateurphotographer.co.uk/reviews/dslrs/canon-eos-7d/8), for instance, can capture those rich purples in RAW mode, but physically cannot record a fair number of greens that even aRGB covers, so if that data has to be "compressed" back into aRGB for putting online (kind of what everyone is doing these days) then we don't just lose those rich colours, we also distort our greens.  That plain old sucks.
 
 Then: the question "Is this problem academic?" and to that I have to categorically say "No, not even slightly".  Every time you pick up a digital camera and walk out to take a picture of blue or purple flowers, or some particularly inspiring mixture of green leaves, you'll end up disappointed that the digital result looks nothing like what you actually saw before you took the picture, simply because real life has tons of colours that simply don't fit in your camera's digital colour space. They get "capped off" at the edge of the gamut. Even a colour-calibrated workflow won't help here: I have four digital cameras and a high resolution scanner and two large monitors, all of which get colour-calibrated independently (the monitors with an ICC profile that gets rechecked every two weeks, the cameras by way of a colour calibration sheet that is shot along with subjects and then corrected for in Adobe Lightroom). However, even with colour calibration you cannot solve the problem of "trying to record colours that *don't fit* in the sensor's gamut" because the sensor literally cannot record them. Colours close to the edge will sort-of trigger the sensor and yield a faint signal of the wrong colour, and colours further from the edge simply don't trigger anything. They don't exist, as far as the sensor knows, in the same way UV and IR don't make it into your photographs (unless you bought a dedicated uv/ir camera, or hacked your sensor filter).
 
