--- a/gh-weblog-2/content/posts/markdown/2017-03-25-22-35-49.md
+++ b/gh-weblog-2/content/posts/markdown/2017-03-25-22-35-49.md
@@ -11,5 +11,5 @@ Once in water, I now swim here, holding that which muddles beer. Separate it fro
 And the answer:
 
 <span style="background: black; color: black">
-From fish we get a jellied web, that filters the last bits of drab, from finished beers sent off for casking: "isinglass" the name of asking.
+From fish we get a jellied web, that filters the last bits of drab, from finished beers sent off for casking: ["isinglass"](https://en.wikipedia.org/wiki/Isinglass) the name of asking.
 </span>
