Saving new entry 2017-03-25-22-35-49

--- a/gh-weblog-2/content/posts/markdown/2017-03-25-22-35-49.md
+++ b/gh-weblog-2/content/posts/markdown/2017-03-25-22-35-49.md
@@ -10,6 +10,6 @@ Once in water, I now swim here, holding that which muddles beer. Separate it fro
 
 And the answer:
 
-<span style="background: black; color: black!important">
-From fish we get a jellied web, that filters the last bits of drab, from finished beers sent off for casking: ["isinglass"](https://en.wikipedia.org/wiki/Isinglass) the name of asking.
+<span style="background: black; color: black">
+From fish we get a jellied web, that filters the last bits of drab, from finished beers sent off for casking: "<a  style="color: black" href="https://en.wikipedia.org/wiki/Isinglass">isinglass</a>" the name of asking.
 </span>
