Saving new entry 2017-12-01-22-59-35

--- a/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
+++ b/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
@@ -27,9 +27,8 @@ If you don't do this, you'll see errors about SDK_71A things not being set in th
 
 Still in `Project`/`Properties`, in the "VC++ Directories" section, add two directories to the "Includes" path. Specifically, you want to add the `mu` and `shared` dirs for the Windows 10 SDK that you're working with. As of today, for the Fall creator edition, that would be `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0` so you need to add the following to that path:
 
-```
-;C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\mu;C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared;
-```
+- `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\mu;`
+- `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared;`
 
 If you don't do this, or use the wrong path, you'll probably see a lot of errors about a missing `windows.h` (which is in the `mu` directory) and/or a missing `winapifamily.h` (which is in the `shared` directory).
 
