--- a/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
+++ b/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
@@ -1,4 +1,4 @@
-Probably the best tutorial on getting started writing a VST plugins (whether you want to make an instrument or a filter) is Martin Finke's [Making Audio Plugins](http://www.martin-finke.de/blog/tags/making_audio_plugins.html). It covers going from zero to hero but it has one downside: it's from 2012, and the tools used have some issues in 2017. Not big issues, just "big enough to make frustrate people who would otherwise dive right in, into doing something else instead". So, what can we do?
+Probably the best tutorial on getting started writing a VST plugins (whether you want to make an instrument or a filter) is Martin Finke's [Making Audio Plugins](http://www.martin-finke.de/blog/tags/making_audio_plugins.html). It covers going from "zero to hero" but it has one downside: it's from 2012, and the tools used have some issues in 2017. Not big issues, just "big enough to frustrate people who would otherwise dive right in, into doing something else instead". So, what can we do?
 
 First off, it's 2017 (coming up to 2018) and I'm going to assume you're using Windows mostly because that's what I do (because several audio production tools I use only exist for Windows. I also have a mac, yes I own Ableton, no I'm not covering using XCode in 2017 here. But if you want to do that work for me, I will be more than happy to add your findings to this blog post! (hit me up [here](https://github.com/pomax/pomax.github.io/issues) to discuss that!).
 
