Saving new entry 2017-12-01-22-59-35

--- a/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
+++ b/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
@@ -1,17 +1,16 @@
-Probably the best tutorial on getting started writing a VST plugins (whether you want to make an instrument or a filter) is Martin Finke's [Making Audio Plugins](http://www.martin-finke.de/blog/tags/making_audio_plugins.html). It covers going from "zero to hero" but it has one downside: it's from 2012, and the tools used have some issues in 2017. Not big issues, just "big enough to frustrate people who would otherwise dive right in, into doing something else instead". So, what can we do?
+Probably the best tutorial on getting started writing a VST plugins (whether you want to make an instrument or a filter) is Martin Finke's [Making Audio Plugins](http://www.martin-finke.de/blog/tags/making_audio_plugins.html). It covers going from "zero to hero" but it has one downside: it was written in 2012, and using equivalent tools from 2017 leads to some issues when trying to get to a point where you can actually compile your plugin. Mind you, they're not big issues, but they're "big enough to frustrate people who would otherwise dive right in, losing them as they walk away to do something else instead".
 
-First off, it's 2017 (coming up to 2018) and I'm going to assume you're using Windows mostly because that's what I do (because several audio production tools I use only exist for Windows. I also have a mac, yes I own Ableton, no I'm not covering using XCode in 2017 here. But if you want to do that work for me, I will be more than happy to add your findings to this blog post! (hit me up [here](https://github.com/pomax/pomax.github.io/issues) to discuss that!).
+So, what can we do?
+
+First off, it's 2017 (coming up to 2018) and I'm going to assume you're using Windows mostly because that's what I'm using (because several audio production tools I use only exist for Windows. I also have a mac, yes I own Ableton, no I'm not covering using XCode in 2017 here. But if you want to do that work for me, I will be more than happy to add your findings to this blog post! (hit me up [here](https://github.com/pomax/pomax.github.io/issues) to discuss that!).
 
 ## Getting the right tools
 
-It's 2017, you're probably on Windows 10, so let's go:
-
-1. Grab [Visual Studio 2017 Community Edition](https://www.visualstudio.com/downloads/).
-2. When you install that, make sure to check all the SDKs and install those. Pretty important
+You're probably on Windows 10, so we want to install [Visual Studio 2017 Community Edition](https://www.visualstudio.com/downloads/) with all the SDKs checked during the installation. That's pretty important. We need those SDKs.
 
 ## Following the instructions
 
-While "Making Audio Plugins [part 2](http://www.martin-finke.de/blog/articles/audio-plugins-002-setting-up-wdl-ol/)" covers most of it, once you've used python to create your first plugin code, and you're loading the `.sln` in Visual C++, you're going to hit warnings and errors.
+While "Making Audio Plugins [part 2](http://www.martin-finke.de/blog/articles/audio-plugins-002-setting-up-wdl-ol/)" covers most of it, once you've used python to create the directory with all the files for your first plugin, and you're loading the `.sln` file in Visual C++, you're going to hit warnings and errors.
 
 _Don't worry, it's okay_
 
@@ -19,23 +18,39 @@ Accept the suggestion by VC++ to upgrade the project to the modern SDKs (which i
 
 ### Update the platform
 
-Go to `Project` and then `Properties`, and in the "General" tab, change the platform tools from Windows XP (yep. Windows XP) to Windows 10. 
+Go to `Project` and then `Properties`, and in the "General" settings, change the platform tools from "Visual Studio 2017 - Windows XP (v...)" to just "Visual Studio 2017 (v...)", so that we're not trying to compile against anything Windows-XP-related.
 
-If you don't do this, you'll see errors about SDK_71A things not being set in the registry. They are complete red herrings, because what they really mean is "the project is using an SDK that I don't know about", which is true: we're on Windows 10, we're using SDK version 141, not version 71!
+If you don't do this, you'll see errors like the following:
 
-### Update your include path
+```
+error MSB8003  Could not find WindowsSdkDir_71A variable from the registry.
+```
 
-Still in `Project`/`Properties`, in the "VC++ Directories" section, add two directories to the "Includes" path. Specifically, you want to add the `mu` and `shared` dirs for the Windows 10 SDK that you're working with. As of today, for the Fall creator edition, that would be `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0` so you need to add the following to that path:
+Which, aside from being horribly poor grammar, is also a red herring: what this really mean is "the project is using an SDK that cannot be found", which is true: we're on Windows 10, we're using SDK version 141 (or perhaps by the time you read this, even higher), rather than version 71.
+
+### Update your include path, probably
+
+If, after updating the platform tools, you try to compile and you get `missing windows.h` and/or `missing winapifamily.h` errors, then we need to manually intervene because Visual Studio did not pick the correct paths for including common headers from.
+
+In the project properties, go to the "VC++ Directories" section, because we'll need to add two directories to the "Includes" path, which is probably already filled in as `$(VC_IncludePath);$(WindowsSDK_IncludePath);`
+
+We'll need to add the `\mu` and `\shared` directories for the Windows SDK that we're working with, which as of the date of this post is the Windows 10 Fall Creator Edition SDK version 10.0.16299.0, found (by default - if you changed your installation path then you should know what to do here) in:
+
+```
+C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0
+```
+
+Given that location, we will need to add the following two paths to the include path in the project properties include path:
 
 - `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\mu;`
 - `C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared;`
 
-If you don't do this, or use the wrong path, you'll probably see a lot of errors about a missing `windows.h` (which is in the `mu` directory) and/or a missing `winapifamily.h` (which is in the `shared` directory).
+So we end up with the Include path string "$(VC_IncludePath);$(WindowsSDK_IncludePath);C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\mu;C:\Program Files (x86)\Windows Kits\10\Include\10.0.16299.0\shared;".
 
-### Retargeting the project
+### Retargeting the project, possibly
 
-Finally, after accepting these changes to the project properties, we right-click on `MyFirstPlugin-app` and choose "retarget projects". This will pop up a dialog that lets you pick the SDK version, and make sure to pick the `10.0.....` version that matches what we used for the Platform Tools in the project properties.
+Finally, it's possible that trying to compile after these two steps still doesn't work. In that case, right-click on `MyFirstPlugin-app` and choose "retarget projects". This will pop up a dialog that lets you pick the SDK version. Make sure to pick the `10.0.....` version that matches what we used for the Platform Tools in the project properties, and accept that change.
 
-## You're good to go!
+## You should be good to go!
 
 Alright, now we can get back to that awesome tutorial and make some audio plugins. Select `MyFirstPlugin-app`, hit F5 to start a compile, and "things should just work(tm)".
