Saving new entry 2017-12-01-22-59-35

--- a/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
+++ b/gh-weblog-2/content/posts/markdown/2017-12-01-22-59-35.md
@@ -32,7 +32,7 @@ Which, aside from being horribly poor grammar, is also a red herring: what this 
 
 ### Update your include path, probably
 
-If, after updating the platform tools, you try to compile and you get `missing windows.h` and/or `missing winapifamily.h` errors, then we need to manually intervene because Visual Studio did not pick the correct paths for including common headers from.
+If, after updating the platform tools, you try to compile and you get `missing windows.h` and/or `missing winapifamily.h` errors, then we need to manually intervene because Visual Studio did not pick the correct paths for including common headers.
 
 In the project properties, go to the "VC++ Directories" section, because we'll need to add two directories to the "Includes" path, which is probably already filled in as `$(VC_IncludePath);$(WindowsSDK_IncludePath);`
 
