Saving new entry 2018-01-31-22-14-44

--- a/gh-weblog-2/content/posts/markdown/2018-01-31-22-14-44.md
+++ b/gh-weblog-2/content/posts/markdown/2018-01-31-22-14-44.md
@@ -7,7 +7,7 @@ What is a couple of tech-minded people to do in a situation like this?
 
 We ended up setting up an XLR conference microphone (the kind that needs 48V [phantom power](https://en.wikipedia.org/wiki/Phantom_power) to work) outside, with a long (like, looong) cable running down the side, under the porch, into the house through a ventilation box, into the living room, and into a USB XLR mixer (a Behringer [U-Phoria UMC404HD](https://www.long-mcquade.com/67988/Pro_Audio_Recording/Audio_Interfaces/Behringer/U-Phoria_UMC404HD_Audiophile_4x4_24-Bit_192_kHz_USB_Audio_MIDI_Interface.htm)), and then using DDMF's [Virtual Audio Stream](http://www.virtualaudiostream.com) to set up a digital audio filter chain from the microphone input to the speakers, using their "Effect Rack" utility.
 
-![](/gh-weblog-2/images/bird-vst/the-setup.png)
+![](/gh-weblog-2/images/bird-vst/the-setup.jpg)
 
 Now we can listen to birds (oh my god, so many birds) while working inside! (at least until the weather improves and we can open the windows like normal people would =)
 
