Saving new entry 2017-03-10-01-09-18

--- a/gh-weblog-2/content/posts/markdown/2017-03-10-01-09-18.md
+++ b/gh-weblog-2/content/posts/markdown/2017-03-10-01-09-18.md
@@ -259,7 +259,7 @@ looked like this instead?
 
 ![Japanese LaTeX](https://pomax.github.io/bezierinfo/images/latex/98885bce8eeabb5a9bdddd12cd6cb4382115ad5c.svg)   
 
-Of course the answer is "yes, that would be lovely, actually" and so I had a look at whether CJK fonts could be used in LaTeX setting. I have a [background in Japanese](https://pomax.github.com/NRGrammar) and so I've written LaTeX with Japanese in it before, and my naive thought was to just put Japanese in the LaTeX, teach MathJax to use a Unicode font with Japanese support, and that would be that. Unfortunately, it turns out MathJax is not as flexible as "real" LaTeX engines, and it can't really deal with non-English text. So that basically meant I had to give up MathJax, and instead try to go for something else.
+Of course the answer is "yes, that would be lovely, actually" and so I had a look at whether CJK fonts could be used in LaTeX setting. I have a [background in Japanese](http://pomax.github.io/nrGrammar) and so I've written LaTeX with Japanese in it before, and my naive thought was to just put Japanese in the LaTeX, teach MathJax to use a Unicode font with Japanese support, and that would be that. Unfortunately, it turns out MathJax is not as flexible as "real" LaTeX engines, and it can't really deal with non-English text. So that basically meant I had to give up MathJax, and instead try to go for something else.
 
 And as it so happens, there is a perfect candidate for this job that I never used in the build system because it really is just "a desktop tool" but as MathJax was already getting invoked through an `exec` call, now seemed a good time to see if it would be a feasible solution to the problem of localized LaTeX: XeLaTeX, that is to say LaTeX code written for the [XeTeX](https://en.wikipedia.org/wiki/XeTeX) engine, which is basically a modern, utf-8 aware, system and OpenType font aware TeX engine. If TeX is the system that lets you do "beautiful typesetting for English", XeTeX is the completely from-the-ground-up rewrite of TeX that lets you do "beautiful typesetting in any language, with any font".
 
