--- a/gh-weblog-2/content/posts/markdown/2018-12-03-19-00-59.md
+++ b/gh-weblog-2/content/posts/markdown/2018-12-03-19-00-59.md
@@ -6,7 +6,7 @@ Things are not so simple when you do videography, though. I have a UHD video sou
 
 Over short distances, that's not much of a problem: you can get 60" 18Gbps HDMI cables using copper wire that work perfectly fine. However, over longer distances copper wires aren't good enough: that 30 foot HDMI cable you see advertised might do 1080p, but it certainly won't be able to do 4k without signal corruption that leads to undecodable frames (4k video is literally four times as much data per second compared to a 1080p signal. You need a _lot_ more bandwidth).
 
-For longer distances, you basically need fiber optic cable. But again, not all cables are created equal, and most cables have product descriptions that are outright lies: if a cable says it's 18Gbps and it also says it'll do 4:4:4 4k at 60fps, then those two claims are mutually exclusive. Either it's an 18Gbps cable, or it's a 4:4:4 4k at 60 fps cable, but it cannot be both. In fact, let's look at a simple table from the [HDMI manufacturing specification FAQ])https://www.hdmi.org/manufacturer/hdmi_2_0/hdmi_2_0_faq.aspx#146) that explains why:
+For longer distances, you basically need fiber optic cable. But again, not all cables are created equal, and most cables have product descriptions that are outright lies: if a cable says it's 18Gbps and it also says it'll do 4:4:4 4k at 60fps, then those two claims are mutually exclusive. Either it's an 18Gbps cable, or it's a 4:4:4 4k at 60 fps cable, but it cannot be both. In fact, let's look at a simple table from the [HDMI manufacturing specification FAQ](https://www.hdmi.org/manufacturer/hdmi_2_0/hdmi_2_0_faq.aspx#146) that explains why:
 
 [![](http://pomax.github.io/gh-weblog-2/images/screenshot.282.png)]()
 
