Saving new entry 2019-03-19-15-34-16

--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -9,3 +9,7 @@ The sun hood _just barely_ fits in a 72mm step up ring, fitting pretty tight, an
 3. you're done.
 
 Well, almost: that sun hood isn't round, it's got some cutouts, so you probably want to still cut up your lens cap and use the resulting "barrel" to cover those holes so light can't get in from behind, reflect off the rear of the filter glass, and make its way into your shot. It's artsy, but probably not what you're going for.
+
+### get your parts
+
+![lens, step-up, and filter](gh-weblog/images/7-14mm filter/parts.jpg)
