Saving new entry 2019-03-19-15-34-16

--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -12,4 +12,4 @@ Well, almost: that sun hood isn't round, it's got some cutouts, so you probably 
 
 ### get your parts
 
-![lens, step-up, and filter](gh-weblog/images/7-14mm filter/parts.jpg)
+<img src="gh-weblog-2/images/7-14mm filter/parts.jpg">
