Saving new entry 2019-03-19-15-34-16

--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -10,6 +10,20 @@ The sun hood _just barely_ fits in a 72mm step up ring, fitting pretty tight, an
 
 Well, almost: that sun hood isn't round, it's got some cutouts, so you probably want to still cut up your lens cap and use the resulting "barrel" to cover those holes so light can't get in from behind, reflect off the rear of the filter glass, and make its way into your shot. It's artsy, but probably not what you're going for.
 
-### get your parts
+### A short picture tutorial
+
+Step 1: get your parts ready!
 
 <img src="gh-weblog-2/images/7-14mm filter/parts.jpg">
+
+Step 2: place your step-up ring 86mm down, 72mm up, and press you lens all the way through it.
+
+<img src="gh-weblog-2/images/7-14mm filter/base.jpg">
+
+Step 3: screw on your filter
+
+<img src="gh-weblog-2/images/7-14mm filter/filter.jpg">
+
+Step 4: you're basically done.
+
+<img src="gh-weblog-2/images/7-14mm filter/done.jpg">
