--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -8,7 +8,9 @@ The sun hood _just barely_ fits in a 72mm step up ring, fitting pretty tight, an
 2. get an [86mm thin UV filter](https://www.amazon.ca/gp/product/B07HJ98MCG) for $7
 3. you're done.
 
-Well, almost: that sun hood isn't round, it's got some cutouts, so you probably want to still cut up your lens cap and use the resulting "barrel" to cover those holes so light can't get in from behind, reflect off the rear of the filter glass, and make its way into your shot. It's artsy, but probably not what you're going for.
+Well, almost: that sun hood isn't round, it's got some cutouts, so you probably want to put a strip of "something" to cover up those holes so light can't get in from behind, reflect off the rear of the filter glass, and make its way into your shot. It's artsy, but probably not what you're going for.
+
+(You might be tempted to cut your lens cap for that, but I'd recommend against that: the cap works on the same principle of "wedging itself over the sun hood" so with the lens cap barrel over the sun hood, the lips of the sun hood will no longer have any spring, and can't grip the step-up ring)
 
 ### A short picture tutorial
 
