--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -1,4 +1,4 @@
-I own a [Panasonic Lumix GH5](https://www.dpreview.com/reviews/panasonic-lumix-dc-gh5), and it's pretty great, and I also own the [Panasonic Lumix Vario G 7-14mm aspherical lens](https://www.dpreview.com/reviews/panasonic-7-14-4-o20) and it's _also_ pretty great, except for one problem: you can't put filters on it. It has a ridiculous integrated sun hood without any sort of screwthread so you can't screw even a clear filter to protect the lens not even from dropping, but from simple things like splash-drops hitting the lens glass and being hard to clean off.
+I own a [Panasonic Lumix GH5](https://www.dpreview.com/reviews/panasonic-lumix-dc-gh5), and it's pretty great, and I also own the [Panasonic Lumix Vario G 7-14mm aspherical lens](https://www.dpreview.com/reviews/panasonic-7-14-4-o20) and it's _also_ pretty great, except for one problem: you can't put filters on it. It has a ridiculous integrated sun hood without any sort of screwthread so you can't screw in even a clear filter to protect the lens, and I don't mean "from being dropped" but even from something simple like a bit of water spray hitting the lens glass and being a chore to clean off because the lens is a glass dome instead of an easy to clean sheet.
 
 So I had a look around at filter adapters and they're either [very expensive](https://www.amazon.com/Wonderpana-System-Olympus-7-14mm-Thirds/dp/B00AUK8XNG), or [simply non-existent](https://www.newsshooter.com/2014/05/05/dfocus-filter-adapter-for-panasonic-lumix-7-14-f4-0-designed-for-blackmagic-pocket-cinema-camera-users/), so I've been trying to figure out something that works. I initially thought of using the lens cap that comes with the lens, trimming off the "cap" and then gluing a filter step ring to it so that I can screw in a filter, but as it turns out: you don't even need to do that.
 
