--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -2,7 +2,7 @@ I own a [Panasonic Lumix GH5](https://www.dpreview.com/reviews/panasonic-lumix-d
 
 I had a look around at filter adapters and they're either [very expensive](https://www.amazon.com/Wonderpana-System-Olympus-7-14mm-Thirds/dp/B00AUK8XNG), or [simply non-existent](https://www.newsshooter.com/2014/05/05/dfocus-filter-adapter-for-panasonic-lumix-7-14-f4-0-designed-for-blackmagic-pocket-cinema-camera-users/), so I've been trying to figure out something that works without breaking the bank or custom fabrication. I initially thought of using the lens cap that comes with the lens, trimming off the "cap" side with a band saw, and then gluing a filter ring onto it so that I can screw in a filter, but as it turns out: you don't even need to do that.
 
-The sun hood _just barely_ fits in a 72mm step up ring, fitting pretty tight, and while 72-82mm is not big enough of a step (you'll see the edges of the ring at 7mm), 72-86mm works splendidly, so rather than buying a $100+ solution to mount unaffordable 105mm filters to your lens,  I would strongly recommend the following $15 solution instead (and if it doesn't work for you, at least you've only spent $15):
+The sun hood _just barely_ fits in a 72mm step up ring, fitting pretty tight, and while 72-82mm is not big enough of a step (you'll see the edges of the ring at 7mm), using a 72-86mm step ring works splendidly, without anything in the frame even at 7mm. So: rather than buying a $100+ solution so you can then mount unaffordable and hard to find 105mm filters to your lens, I would strongly recommend first trying the following $15 solution, instead (and if it doesn't work for you, at least you've only spent $15):
 
 1. get a [72-86mm filter step-up ring](https://www.amazon.com/gp/product/B009T1C1IU)
 2. get an [86mm thin UV filter](https://www.amazon.ca/gp/product/B07HJ98MCG)
