Saving new entry 2019-03-19-15-34-16

--- a/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
+++ b/gh-weblog-2/content/posts/markdown/2019-03-19-15-34-16.md
@@ -18,11 +18,11 @@ Step 1: get your parts ready!
 
 <img src="/gh-weblog-2/images/7-14mm filter/parts.jpg">
 
-Step 2: place your step-up ring 86mm down, 72mm up, and press you lens all the way through it.
+Step 2: place your step-up ring 86mm down, 72mm up, and press your lens down all the way through.
 
 <img src="/gh-weblog-2/images/7-14mm filter/base.jpg">
 
-Step 3: screw on your filter
+Step 3: screw on your filter...
 
 <img src="/gh-weblog-2/images/7-14mm filter/filter.jpg">
 
