Saving new entry 2019-09-16-22-20-24

--- a/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
+++ b/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
@@ -1,4 +1,4 @@
-Lightroom catalogs are [SQLite3](https://sqlite.org/index.html) files, and some things that take Lightroom effectively forever can be performed in milliseconds if you're willing to ignore Lightroom entirely and just load the catalog in SQLite3, probably using an administrative GUI.
+[Adobe Lightroom](https://www.adobe.com/products/photoshop-lightroom-classic.html) catalogs are [SQLite3](https://sqlite.org/index.html) files, and some things that take Lightroom effectively forever can be performed in milliseconds if you're willing to ignore Lightroom entirely and just load the catalog in SQLite3, probably using [an administrative GUI](https://sqlitebrowser.org).
 
 For instance, if you want the list of all filenames for images that haven't been tagged yet, good luck making Lightroom do that. Even if the user script that some people will tell you to use, actually getting Lightroom to perform this for even a low number of photos in a several thousand photo catalog will take excruciatingly long, whereas the SQLite3 query will probably take less than 100 milliseconds:
 
