Saving new entry 2019-09-16-22-20-24

--- a/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
+++ b/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
@@ -18,3 +18,9 @@ AND
 ```
 
 Load your catalog, run that query, and done.
+
+There is in fact a lot more that you can do this way, but you might need to do some table hunting: my lightroom catalog has 112 tables, and finding which table houses what information is "half the fun" (read: quite the chore). However, once you've found where to find what, writing a query that just pulls the data you need in exactly the format you need takes very little time, and the amount of time you save for subsequent occasions you need to do the same thing is incredible.
+
+Best of all, you can automate your sqlite. Python, Node, Ruby, all common modern scripting languages can with a sqlite connector, so you can just write a script that loads in the catalog file, runs your query, writes the result to file (or even updates the catalog directly) and all you have to do is execute your script. 
+
+And really, that's what we wish Adobe just offered out of the box. They don't, but because they use Sqlite3, "also: they do".
