Saving new entry 2019-09-16-22-20-24

--- a/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
+++ b/gh-weblog-2/content/posts/markdown/2019-09-16-22-20-24.md
@@ -23,4 +23,4 @@ There is in fact a lot more that you can do this way, but you might need to do s
 
 Best of all, you can automate your sqlite. Python, Node, Ruby, all common modern scripting languages can with a sqlite connector, so you can just write a script that loads in the catalog file, runs your query, writes the result to file (or even updates the catalog directly) and all you have to do is execute your script.  And really, that's what we wish Adobe just offered out of the box.
 
-They don't, but because they use Sqlite3, "also: they do".
+They don't, but because they use Sqlite3, "they do".
