--- a/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
+++ b/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
@@ -12,3 +12,5 @@ Most of that work has now been automated with [Github actions](https://github.co
 So the only thing I still need to do manually now is sync from the `BezierInfo-2` dev repo to the main `bezierinfo` repo, which feels sensible: you don't want to indiscriminately push your dev code to prod without review.
 
 But this sure makes an involved process a heck of a lot easier.
+
+I guess that means I should also add a Github action to automatically build the ToC for this blog site anytime I add a new entry... because that's also a manual step right now.
