Saving new entry 2020-06-08-00-36-20

--- a/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
+++ b/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
@@ -13,4 +13,4 @@ So the only thing I still need to do manually now is sync from the `BezierInfo-2
 
 But this sure makes an involved process a heck of a lot easier.
 
-I guess that means I should also add a Github action to automatically build the ToC for this blog site anytime I add a new entry... because that's also a manual step right now.
+I guess that means I should also add a Github action to automatically build the ToC for this blog site anytime I add a new entry... because that's also a manual step right now... and I can probably offload the RSS generation rather than doing that in-browser every time.
