--- a/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
+++ b/gh-weblog-2/content/posts/markdown/2020-06-08-00-36-20.md
@@ -6,7 +6,10 @@ Most of that work has now been automated with [Github actions](https://github.co
 2. Install [TeX Live](https://www.tug.org/texlive), which installs all the TeX features that the primer relies on
 3. Pulls the `pdf2svg` source code from the web and builds it
 4. Grabs [nvm](https://github.com/nvm-sh/nvm) and uses it to install the latest version of Node and runs `npm install`
-5. Runs `npm run build`
+5. Runs `npm run build`, which:
+  - runs [webpack several times](https://github.com/Pomax/BezierInfo-2/blob/master/webpack.config.js), for each locale, which
+  - preprocesses the souce code to [replace LaTeX code with `<svg>` tags](https://github.com/Pomax/BezierInfo-2/blob/master/lib/latex-loader.js) by literally wrapping it in a LaTeX document and then calling [xelatex](https://en.wikipedia.org/wiki/XeTeX) on that source, cropping the resulting PDF, converting that crop to an SVG image on disk, and reading in the SVG image's dimensions so the original source can be replaced with `<img src="..." width="..." height="...">`, ensuring the document doesn't constantly reflow as images load in.
+  - wraps all example code such that references to the graphics API, which cannot possibly work in isolation, actually point to the right thing. Then finally,
 6. Commits and pushes the result back up to `master`
 
 So the only thing I still need to do manually now is sync from the `BezierInfo-2` dev repo to the main `bezierinfo` repo, which feels sensible: you don't want to indiscriminately push your dev code to prod without review.
